force-app/main/default/objects/Blog_Post__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Author</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Blog_Posts</relationshipName>
    <type>Lookup</type>
</CustomField>