force-app/main/default/objects/Blog_Post__c/fields/Large_Image_Id__c.field-meta.xml
<CustomField>
    <fullName>Large_Image_Id__c</fullName>
    <label>Large Image Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>