force-app/main/default/objects/Blog_Post__c/fields/Medium_Image_id__c.field-meta.xml
<CustomField>
    <fullName>Medium_Image_id__c</fullName>
    <label>Medium Image id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>