force-app/main/default/objects/Blog_Post__c/fields/Small_Image_Id__c.field-meta.xml
<CustomField>
    <fullName>Small_Image_Id__c</fullName>
    <label>Small Image Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>